force-app/main/default/objects/Loca_Metric__c/Loca_Metric__c.object-meta.xml
<CustomObject>
    <label>Loca Metric</label>
    <nameField>
        <label>Loca Mterics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loca Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>