force-app/main/default/objects/Loca_Metric__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <label>Account Tier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>