force-app/main/default/objects/Loca_Metric__c/fields/Age_in_days__c.field-meta.xml
<CustomField>
    <fullName>Age_in_days__c</fullName>
    <formula>(DATEVALUE(TEXT(Today()))- DATEVALUE(TEXT(Entered_Date_Time__c)))</formula>
    <label>Age in days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>