force-app/main/default/objects/Loca_Metric__c/fields/Instance_ID__c.field-meta.xml
<CustomField>
    <fullName>Instance_ID__c</fullName>
    <label>Instance ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>