force-app/main/default/objects/Loca_Metric__c/fields/SLA_Resp_Resol_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Resp_Resol_Date__c</fullName>
    <label>SLA Resp. Resol. Date</label>
    <type>Date</type>
</CustomField>